# WBCameroonProject

./: NordOuest.csv  README.md  analysis.py  arcoanalysis.ipynb  cameroon_results_vectorized.py  fdid_summary_output2.txt  pyproject.toml  requirements.txt
.github/workflows/: rebuild.yml  runresults.yml
cameroon_fdid/: SudOuest.csv  cameroon_results_vectorized.py
